Added updated HTML

--- a/Html/Coming-soon.html
+++ b/Html/Coming-soon.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Discordels</title>
+    <title>Coming soon</title>
+    <link rel="stylesheet" href="/CSS/coming-soon.css" />
     <link rel="stylesheet" href="/CSS/style.css" />
-    <link rel="stylesheet" href="/CSS/Coming-soon.css" />
-
-    <!-- Scripts: -->
-    <script src="/JS/code.js"></script>
-
+    <script src="/JS/Code.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -19,46 +16,27 @@
     />
     <link
       rel="apple-touch-icon"
-      sizes="57x57"
-      href="/Graphics/apple-icon-57x57.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="/Graphics/apple-icon-60x60.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="/Graphics/apple-icon-76x76.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="/Graphics/apple-icon-114x114.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="/Graphics/android-icon-192x192.png"
+      sizes="180x180"
+      href="/Graphics/Fav/apple-touch-icon.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="/Graphics/favicon-32x32.png"
+      href="/Graphics/Fav/favicon-32x32.png"
     />
     <link
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="/Graphics/favicon-16x16.png"
+      href="/Graphics/Fav/favicon-16x16.png"
     />
-    <link rel="manifest" href="/Graphics/manifest.json" />
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
-    <meta name="theme-color" content="#ffffff" />
+    <link rel="manifest" href="/Graphics/Fav/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/Graphics/Fav/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
     <meta name="msapplication-TileColor" content="#ffc40d" />
     <meta name="theme-color" content="#ffdf00" />
   </head>
@@ -66,18 +44,16 @@
     <!-- navbar start -->
     <header class="row container">
       <a href="#" class="logo">
-        <img src="/Graphics/rainbow .png" alt="" />
+        <img src="/Graphics/logo/yellow.jpg" alt="" />
       </a>
       <div class="toggleMenu" onclick="toggleMenu();"></div>
       <nav class="navigation row">
         <ul class="row">
-          <li><a href="/index.html" target="_blank">Home</a></li>
-          <li><a href="/Html/Roadmap.html" target="_blank">Road-map</a></li>
+          <li><a href="Index.html" target="_blank">Home</a></li>
+          <li><a href="Road-map.html" target="_blank">Road-map</a></li>
+          <li><a href="Coming-soon.html" target="_blank">Whitepaper</a></li>
           <li>
-            <a href="/Html/Coming-soon.html" target="_blank">Whitepaper</a>
-          </li>
-          <li>
-            <a href="https://discord.gg/eSmntTV39W" target="_blank"
+            <a href="https://discord.gg/cQjx8Pm6c5" target="_blank"
               >Join Discord</a
             >
           </li>
