--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="toggleMenu" onclick="toggleMenu();"></div>
       <nav class="navigation row">
         <ul class="row">
-          <li><a href="#" target="_blank">Home</a></li>
+          <li><a href="https://discordels.vercel.app/" target="_blank">Home</a></li>
           <li><a href="/HTML/Road-map.html" target="_blank">Road-Map</a></li>
           <li>
             <a href="/HTML/Coming-soon.html" target="_blank">Whitepaper</a>
