--- a/HTML/Road-map.html
+++ b/HTML/Road-map.html
@@ -50,7 +50,7 @@
       <div class="toggleMenu" onclick="toggleMenu();"></div>
       <nav class="navigation row">
         <ul class="row">
-          <li><a href="Index.html" target="_blank">Home</a></li>
+          <li><a href="https://discordels.vercel.app/" target="_blank">Home</a></li>
           <li><a href="#" target="_blank">Road-Map</a></li>
           <li><a href="Coming-soon.html" target="_blank">Whitepaper</a></li>
           <li><a href="https://discord.gg/eSmntTV39W" target="_blank">Join Discord</a></li>
