--- a/HTML/Coming-soon.html
+++ b/HTML/Coming-soon.html
@@ -49,7 +49,7 @@
       <div class="toggleMenu" onclick="toggleMenu();"></div>
       <nav class="navigation row">
         <ul class="row">
-          <li><a href="Index.html" target="_blank">Home</a></li>
+          <li><a href="https://discordels.vercel.app/" target="_blank">Home</a></li>
           <li><a href="Road-map.html" target="_blank">Road-map</a></li>
           <li><a href="Coming-soon.html" target="_blank">Whitepaper</a></li>
           <li>
